--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         </div >
         </section>
         <section id="educación">
-            <div>
+            <div class="minisec">
                 <h2>Educación</h2>
                 <h3>Diseñadora Gráfica, con dos votos de distinción titulada en Duoc UC, 2023</h3>
-                
+                <h3>Técnico en Administración de empresas titulada en Inacap, 2015</h3>
             </div>            
         </section>
         <section id="experiencia">
@@ -65,6 +65,7 @@
                 <h2>Experiencia Laboral</h2>
                 <h3>Diseñadora Freelance</h3>
                 <h4>2023 - 2024</h4>
+                <br>
                 <ul>
                     <li><p>Diseño y desarrollo web del sitio www.entrementes.cl (Wordpress usando maquetador Gutemberg)</p>
                     </li>
@@ -78,10 +79,10 @@
                     <li><p>Diseño de Identidad visual para Horno Records, En la Nota Podcast, ZS Drones, Mikel, Como sea Replantea, Royek</p></li>
                     <li><p>Diseño de Coverart para distintos artistas urbanos</p></li>
                 </ul>
-            </div>     
-            <div class="minisec">
+                <br>
                 <h3>UX Analyst Paris.cl</h3>
                 <h4>Práctica Profesional 2022 - 2023</h4>
+                <br>
                 <ul>
                     <li><p>Análisis gráfico de Paris.cl y Paris App</p></li>
                     <li><p>Informar bugs al área de desarrollo</p></li>
@@ -93,7 +94,6 @@
                     <li><p>Participación en reuniones bisemanales de la comunidad Front-end y Back-end de Cencommerce</p></li>
                     <li><p>Benchmarck directos e indirectos</p></li>
                     <li><p>Se trabajó en base a sprints y tablero kanban</p></li>
-                    <li><p></p></li>
                 </ul>
             </div>       
         </section>
