--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav>
             <ul>
                 <li class="navegador">
-                    <a>Curriculum</a>
+                    <a href="../prueba_modulo1_ana_robles/index.html">Curriculum</a>
                 </li>
                 <li class="navegador">
-                    <a>Portafolio</a>
+                    <a href="../prueba_modulo1_ana_robles/portafolio.html">Portafolio</a>
                 </li>
             </ul>
         </nav>
@@ -30,9 +30,8 @@
             <div>
                 <h1>Hola!</h1>
                 <div class="presentacion">
-                    <h3>Mi nombre es </h3>
-                    <h2 class="name"><u>Ana Robles</u></h2>
-                    <h3>y soy Diseñadora UX UI</h3>
+                    <h3>Mi nombre es <b>Ana Robles</b> y soy Diseñadora UX UI</h3>
+
                 </div>
             </div>
             <div class="foto-presentacion">
@@ -101,6 +100,6 @@
     <footer>
         <h4>Ana Robles Aguilera. Todos los derechos reservados, 2024</h4>
     </footer>
-    <script src="./js/web.js"></script>
+    <script src="../prueba_modulo1_ana_robles/js/web.js"></script>
 </body>
 </html>
