--- a/portafolio.html
+++ b/portafolio.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../prueba_modulo1_ana_robles/assets/style.css">
     <title>Portafolio Desafío Latam</title>
 </head>
 <body>
-    
+    <header>
+        <img class="logo" src="./assets/img/LOGO ANA LETRAS BLANCAS-03.png">
+        <nav>
+            <ul>
+                <li class="navegador">
+                    <a href="../prueba_modulo1_ana_robles/index.html">Curriculum</a>
+                </li>
+                <li class="navegador">
+                    <a href="../prueba_modulo1_ana_robles/portafolio.html">Portafolio</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer>
+        <h4>Ana Robles Aguilera. Todos los derechos reservados, 2024</h4>
+    </footer>
 </body>
 </html>
