--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 <body>
     <header>
         <img class="logo" src="./assets/img/LOGO ANA LETRAS BLANCAS-03.png">
+        <nav>
+            <ul>
+                <li class="navegador">
+                    <a href="../prueba_modulo1_ana_robles/index.html">Curriculum</a>
+                </li>
+                <li class="navegador">
+                    <a href="../prueba_modulo1_ana_robles/portafolio.html">Portafolio</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="hero">
