--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <li><p>Diseño y desarrollo web del sitio www.entrementes.cl (Wordpress usando maquetador Gutemberg)</p>
                     </li>
                     <li><p>Diseño y desarrollo web del sitio www.thrivepockets.com (Wordpress usando maquetador Elementor)</p></li>
-                    <li><p>Rediseño web de ecommerce www.alishajoyas.cl (en proceso) (Wordpress usando maquetador Divi)</p></li>
+                    <li><p>Rediseño web de ecommerce www.alishajoyas.cl (Wordpress usando maquetador Divi)</p></li>
                     <li><p>Diseño e implementación de cupones de descuento para ecommerce www.magdistribuciones.com.ar (Wordpress usando maquetador Elementor)</p></li>
                     <li><p>Edición de podcast MNG Proyect (Productora Audiovisual)</p></li>
                     <li><p>Creadora de contenido post y reels en redes sociales para Entrementes (Agencia de diseño), Horno Records (Productora Audiovisual) y Supremacía JP (Batallas de Freestyle), uso de la Plataforma Meta Business
