--- a/portafolio.html
+++ b/portafolio.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../prueba_modulo1_ana_robles/assets/style.css">
+    <script src="https://kit.fontawesome.com/8545bc5cb7.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">  
     <title>Portafolio Desafío Latam</title>
-    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <header>
@@ -23,7 +26,60 @@
         </nav>
     </header>
     <main>
-        
+        <section class="hero">
+            <h1>Portafolio de Proyectos desarrollados </h1>
+            <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/logo_desafio_latam.png">
+            <div class="area" >
+                <ul class="circles">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                </ul>
+        </div >
+        </section>
+        <section class="port">
+            <h2>Desafío 1</h2>
+            <div class="proyectos">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio1_foto1.png" alt="desafio 1">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio1_foto2.png" alt="desafio 2">
+            </div>
+        </section>
+        <section class="port">
+            <h2>Desafío 2</h2>
+            <div class="proyectos">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio2.png" alt="desafio 2">
+            </div>
+        </section>
+        <section class="port">
+            <h2>Desafío 3</h2>
+            <div class="proyectos">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio3_foto1.png" alt="desafio 3">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio3_foto2.png" alt="desafio 3">
+            </div>
+        </section>
+        <section class="port">
+            <h2>Desafío 4</h2>
+            <div class="proyectos">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio4_foto1.png" alt="desafio 4">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio4_foto2.png" alt="desafio 4">
+            </div>
+        </section>
+        <section class="port">
+            <h2>Desafío 5</h2>
+            <div class="proyectos">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio5_foto1.png" alt="desafio 5">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio5_foto2.png" alt="desafio 5">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio5_foto3.png" alt="desafio 5">
+                <img class="imagenes" src="../prueba_modulo1_ana_robles/assets/img/desafio5_foto4.png" alt="desafio 5">
+            </div>
+        </section>
     </main>
     <footer>
         <h4>Ana Robles Aguilera. Todos los derechos reservados, 2024</h4>
