--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="./assets/img/LOGO ANA LETRAS BLANCAS-03.png">
+        <img class="logo" src="./assets/img/LOGO ANA LETRAS BLANCAS-03.png" alt="logo ana robles">
         <nav>
             <ul>
                 <li class="navegador">
@@ -31,11 +31,11 @@
                 <h1>Hola!</h1>
                 <div class="presentacion">
                     <h3>Mi nombre es <b>Ana Robles</b> y soy Diseñadora UX UI</h3>
-
                 </div>
             </div>
             <div class="foto-presentacion">
-                <img class=foto-hero src="./assets/img/mi foto.jpeg">
+                <img class=foto-hero src="./assets/img/mi foto.jpeg" alt="foto ana robles">
+                
             </div>
             <div class="area" >
                 <ul class="circles">
@@ -51,15 +51,33 @@
                         <li></li>
                 </ul>
         </div >
+        </section>    
+        <section>
+            <div class="minisec">
+                <h2>Resumen</h2>
+                <p>Profesional del Diseño Gráfico, se desarrolla en el área UX-UI, Multimedia y Web. Con experiencia trabajando con metodologías ágiles</p>
+            </div>            
         </section>
-        <section id="educación">
+        <section>
+            <div class="minisec">
+                <h2>Datos Personales</h2>
+                <ul>
+                    <li><p>Nombre: Ana María Robles Aguilera</p></li>
+                    <li><p>Lugar de Nacimiento:Santiago de Chile</p></li>
+                    <li><p>Fecha de Nacimiento: 16 de Febrero de 1993</p></li>
+                    <li><p>Correo electrónico: ana.robles@live.com</p></li>
+                    <li><p>Teléfono de contacto: (56)948831077</p></li>
+                </ul>
+            </div>            
+        </section>
+        <section>
             <div class="minisec">
                 <h2>Educación</h2>
                 <h3>Diseñadora Gráfica, con dos votos de distinción titulada en Duoc UC, 2023</h3>
                 <h3>Técnico en Administración de empresas titulada en Inacap, 2015</h3>
             </div>            
         </section>
-        <section id="experiencia">
+        <section>
             <div class="minisec">
                 <h2>Experiencia Laboral</h2>
                 <h3>Diseñadora Freelance</h3>
@@ -96,6 +114,7 @@
                 </ul>
             </div>       
         </section>
+        
     </main>
     <footer>
         <h4>Ana Robles Aguilera. Todos los derechos reservados, 2024</h4>
