--- a/index.html
+++ b/index.html
@@ -17,16 +17,34 @@
         <nav>
             <ul>
                 <li class="navegador">
-                    <a href="../prueba_modulo1_ana_robles/index.html">Curriculum</a>
+                    <a href="#curriculum">Curriculum</a>
                 </li>
                 <li class="navegador">
-                    <a href="../prueba_modulo1_ana_robles/portafolio.html">Portafolio</a>
+                    <a href="#portafolio">Portafolio</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="hero">
+        <section class="redes">
+            <div>
+                <ul>
+                    <li>
+                        <a href="https://www.linkedin.com/in/anarobles16/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/anastesia_design/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/AnaRob777" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.behance.net/anarobles16" target="_blank"><i class="fa-brands fa-square-behance"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section id="curriculum" class="hero">
             <div>
                 <h1>Hola!</h1>
                 <div class="presentacion">
@@ -63,7 +81,7 @@
                 <h2>Datos Personales</h2>
                 <ul>
                     <li><p>Nombre: Ana María Robles Aguilera</p></li>
-                    <li><p>Lugar de Nacimiento:Santiago de Chile</p></li>
+                    <li><p>Lugar de Nacimiento: Santiago de Chile</p></li>
                     <li><p>Fecha de Nacimiento: 16 de Febrero de 1993</p></li>
                     <li><p>Correo electrónico: ana.robles@live.com</p></li>
                     <li><p>Teléfono de contacto: (56)948831077</p></li>
@@ -86,7 +104,6 @@
                 <ul>
                     <li><p>Diseño y desarrollo web del sitio www.entrementes.cl (Wordpress usando maquetador Gutemberg)</p>
                     </li>
-                    <li><p>Diseño y desarrollo web del sitio www.thrivepockets.com (Wordpress usando maquetador Elementor)</p></li>
                     <li><p>Rediseño web de ecommerce www.alishajoyas.cl (Wordpress usando maquetador Divi)</p></li>
                     <li><p>Diseño e implementación de cupones de descuento para ecommerce www.magdistribuciones.com.ar (Wordpress usando maquetador Elementor)</p></li>
                     <li><p>Edición de podcast MNG Proyect (Productora Audiovisual)</p></li>
@@ -114,7 +131,46 @@
                 </ul>
             </div>       
         </section>
-        
+        <section id="portafolio"class="hero">
+            <h1>Portafolio de Proyectos desarrollados </h1>
+            <img class="imagenes" src="./assets/img/logo_desafio_latam.png">
+        </section>
+        <section class="port">
+            <h2>Desafío 1</h2>
+            <div class="proyectos">
+                <img class="imagenes" src="./assets/img/desafio1_foto1.png" alt="desafio 1">
+                <img class="imagenes" src="./assets/img/desafio1_foto2.png" alt="desafio 2">
+            </div>
+        </section>
+        <section class="port">
+            <h2>Desafío 2</h2>
+            <div class="proyectos">
+                <img class="imagenes" src="./assets/img/desafio2.png" alt="desafio 2">
+            </div>
+        </section>
+        <section class="port">
+            <h2>Desafío 3</h2>
+            <div class="proyectos">
+                <img class="imagenes" src="./assets/img/desafio3_foto1.png" alt="desafio 3">
+                <img class="imagenes" src="./assets/img/desafio3_foto2.png" alt="desafio 3">
+            </div>
+        </section>
+        <section class="port">
+            <h2>Desafío 4</h2>
+            <div class="proyectos">
+                <img class="imagenes" src="./assets/img/desafio4_foto1.png" alt="desafio 4">
+                <img class="imagenes" src="./assets/img/desafio4_foto2.png" alt="desafio 4">
+            </div>
+        </section>
+        <section class="port">
+            <h2>Desafío 5</h2>
+            <div class="proyectos">
+                <img class="imagenes" src="./assets/img/desafio5_foto1.png" alt="desafio 5">
+                <img class="imagenes" src="./assets/img/desafio5_foto2.png" alt="desafio 5">
+                <img class="imagenes" src="./assets/img/desafio5_foto3.png" alt="desafio 5">
+                <img class="imagenes" src="./assets/img/desafio5_foto4.png" alt="desafio 5">
+            </div>
+        </section>
     </main>
     <footer>
         <h4>Ana Robles Aguilera. Todos los derechos reservados, 2024</h4>
