--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
     <header>
         <img class="logo" src="./assets/img/LOGO ANA LETRAS BLANCAS-03.png" alt="logo ana robles">
-        <nav>
-            <ul>
+        <button id="abrir" class="abrir-menu"><i class="fa-solid fa-bars"></i></button>
+        <nav class="nav" id="nav">
+            <button id="cerrar" class="cerrar-menu"><i class="fa-solid fa-xmark"></i></button>
+            <ul class="nav-list">
                 <li class="navegador">
                     <a href="#curriculum">Curriculum</a>
                 </li>
