--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </section>
         <section>
             <div class="minisec">
-                <h2>Datos Personales</h2>
+                <h2>Sobre mi</h2>
                 <ul>
                     <li><p>Nombre: Ana María Robles Aguilera</p></li>
                     <li><p>Lugar de Nacimiento: Santiago de Chile</p></li>
